@@ -53,7 +53,7 @@
       	font-style: normal;
       }
     </style>
-    <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/application-1a080b68f4.css">
+    <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/application-d83054620e.css">
     {% if config.extra.palette %}
       <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/palettes-05ab2406df.css">
     {% endif %}
