@@ -2,6 +2,6 @@
   "assets/images/favicon.ico": "assets/images/favicon-e565ddfa3b.ico",
   "assets/javascripts/application.js": "assets/javascripts/application-997097ee0c.js",
   "assets/javascripts/modernizr.js": "assets/javascripts/modernizr-4ab42b99fd.js",
-  "assets/stylesheets/application.css": "assets/stylesheets/application-1a080b68f4.css",
+  "assets/stylesheets/application.css": "assets/stylesheets/application-d83054620e.css",
   "assets/stylesheets/palettes.css": "assets/stylesheets/palettes-05ab2406df.css"
 }
